--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,19 +37,18 @@ article {
   height: 750px;
   width: 65%;
   margin-right: 2%;
-  overflow: hidden;
+  vertical-align: top;
 }
 
 aside {
   display: inline-block;
+  vertical-align: top;
   background-color: grey;
   height: 750px;
   width: 32.5%;
-  overflow: hidden;
 }
 
 #description {
-  overflow: hidden;
   margin: 5% auto 5% auto;
   text-align: justify;
   width: 90%;
@@ -77,7 +76,6 @@ article section h2 {
 }
 
 #img_group {
-  overflow: hidden;
   margin: 5% auto 5% auto;
   width: 90%;
   height: 40%;
@@ -86,7 +84,6 @@ article section h2 {
 img {
   width: 30%;
   display: inline-block;
-  vertical-align: baseline;
 }
 
 #img1 {
@@ -103,7 +100,6 @@ img {
 }
 
 aside section {
-  overflow: hidden;
   margin: 10% auto 10% auto;
   text-align: justify;
   width: 85%;
@@ -117,7 +113,6 @@ aside section h2 {
 }
 
 aside div {
-  overflow: hidden;
   margin: 10% auto 10% auto;
   text-align: justify;
   width: 85%;
@@ -133,4 +128,5 @@ footer {
   padding-top: 30pt;
   text-align: center;
   height: 70pt;
+  margin-top: 20pt;
 }
